# backend

./: .gitignore  README.md  admin_dashboard.html
henson-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  autoapp.py  gunicorn.conf.py  pyproject.toml  requirements.txt
henson-backend/.github/: dependabot.yml
henson-backend/.github/workflows/: lint.yml
henson-backend/app/: __init__.py  app.py  auth_supabase.py  database.py  extensions.py  settings.py  utils.py
henson-backend/app/routes/: collectibles.py  events.py  leaderboard.py  users.py
henson-backend/app/static/: admin_dashboard.html
henson-backend/app/tasks/: spawn_task.py
henson-backend/requirements/: dev.txt  prod.txt
